KTTL-284 - Fix Nav Z-index for Banners (#493)

--- a/src/theme/css/frontend/_site-header.scss
+++ b/src/theme/css/frontend/_site-header.scss
@@ -2,13 +2,13 @@ $top--bar-height-mobile: rem-calc(84px);
 $top--bar-height-tablet: rem-calc(106px);
 
 $nav-base-z-index: 100;
-$z-index-topbar: $nav-base-z-index + 1;
 $z-index-nav-blur: $nav-base-z-index;
 $z-index-nav-white-bg: $z-index-nav-blur + 1;
 $z-index-nav-menu: $z-index-nav-blur + 4;
 $z-index-nav-switcher: $z-index-nav-blur + 5;
 $z-index-nav-controls: $z-index-nav-blur + 6;
 $z-index-nav-cta: $z-index-nav-blur + 5;
+$z-index-topbar: $z-index-nav-white-bg + 1;
 
 :root {
   	--site-banner-height: 0px;
@@ -332,13 +332,13 @@ $z-index-nav-cta: $z-index-nav-blur + 5;
 		@apply flex flex-col w-full bg-white;
 		@apply transform-gpu translate-x-full;
 		@apply transition-all duration-300 ease-out;
-		@apply py-px30 px-px43;
+		@apply pb-px30 px-px43 mt-px30;
 
 		@screen lg2 {
 			@apply flex-row items-center;
 			@apply h-full translate-x-0;
 			@apply bg-transparent border-0;
-			@apply p-0;
+			@apply p-0 m-0;
 		}
 	}
 
@@ -757,7 +757,7 @@ $z-index-nav-cta: $z-index-nav-blur + 5;
 #top-nav {
 	height: var(--top-nav-height);
 	@apply px-px28;
-	z-index: var(--z-index-nav-base);
+	// z-index: var(--z-index-nav-base);
 	// md
 	@apply md:px-px50;
 	// lg2
@@ -961,7 +961,7 @@ $z-index-nav-cta: $z-index-nav-blur + 5;
 
 	// Opener
 	.opener-wrap {
-		@apply flex items-center;
+		@apply flex items-center z-1;
 
 		@screen lg2 {
 			@apply hidden;
